examples/test/testpolicy358.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy358
  namespace: namespace387
spec:
  podSelector:
    matchLabels:
      key24: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value5
          key48: value1
          key37: value36
      podSelector:
        matchLabels:
          key42: value1
          key47: value43
          key20: value0
